ChallengeFive/poipoddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-poi-img
  namespace: api
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi-container
        image: registrybwj5358.azurecr.io/poi:1.0
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
            secretProviderClass: "team11aksvault" 
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
