ChallengeFive/tripspoddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-trips-img
  namespace: api
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips-container
        image: registrybwj5358.azurecr.io/trips:1.0
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "team11aksvault"
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
