ChallengeFive/tripviewerpoddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-tripviewer-img
  namespace: web
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer-container
        image: registrybwj5358.azurecr.io/tripviewer:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
