ChallengeFive/userjavapoddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-userjava-img
  namespace: api
  labels:
    app: userjava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      containers:
      - name: userjava-container
        image: registrybwj5358.azurecr.io/user-java:1.0
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "team11aksvault"      
---
apiVersion: v1
kind: Service
metadata:
  name: userjava-service
  namespace: api
spec:
  selector:
    app: userjava
  ports:
    - protocol: TCP
      port: 80
