ChallengeFive/userprofilepoddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-userprofile-img
  namespace: ch5
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile-container
        image: registrybwj5358.azurecr.io/userprofile:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
